--- a/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api_client.mustache
@@ -18,6 +18,7 @@ import tornado.gen
 {{/tornado}}
 
 from {{packageName}}.configuration import Configuration
+from {{packageName}}.api_response import ApiResponse
 import {{modelPackage}}
 from {{packageName}} import rest
 from {{packageName}}.exceptions import ApiValueError, ApiException
@@ -153,7 +154,7 @@ class ApiClient(object):
             self, resource_path, method, path_params=None,
             query_params=None, header_params=None, body=None, post_params=None,
             files=None, response_types_map=None, auth_settings=None,
-            _return_http_data_only=None, collection_formats=None,
+            collection_formats=None,
             _preload_content=True, _request_timeout=None, _host=None,
             _request_auth=None):
 
@@ -260,18 +261,16 @@ class ApiClient(object):
             return_data = None
 
 {{^tornado}}
-        if _return_http_data_only:
-            return (return_data)
-        else:
-            return (return_data, response_data.status,
-                    response_data.getheaders())
+        return ApiResponse(status_code = response_data.status,
+                           data = return_data,
+                           headers = response_data.getheaders(),
+                           raw_data = response_data.data)
 {{/tornado}}
 {{#tornado}}
-        if _return_http_data_only:
-            raise tornado.gen.Return(return_data)
-        else:
-            raise tornado.gen.Return((return_data, response_data.status,
-                                      response_data.getheaders()))
+        raise tornado.gen.Return(ApiResponse(status_code = response_data.status,
+                           data = return_data,
+                           headers = response_data.getheaders(),
+                           raw_data = response_data.data))
 {{/tornado}}
 
     def sanitize_for_serialization(self, obj):
@@ -379,7 +378,7 @@ class ApiClient(object):
                  path_params=None, query_params=None, header_params=None,
                  body=None, post_params=None, files=None,
                  response_types_map=None, auth_settings=None,
-                 async_req=None, _return_http_data_only=None,
+                 async_req=None,
                  collection_formats=None,_preload_content=True,
                   _request_timeout=None, _host=None, _request_auth=None):
         """Makes the HTTP request (synchronous) and returns deserialized data.
@@ -400,8 +399,6 @@ class ApiClient(object):
         :param files dict: key -> filename, value -> filepath,
             for `multipart/form-data`.
         :param async_req bool: execute request asynchronously
-        :param _return_http_data_only: response data without head status code
-                                       and headers
         :param collection_formats: dict of collection formats for path, query,
             header, and post parameters.
         :param _preload_content: if False, the urllib3.HTTPResponse object will
@@ -427,7 +424,7 @@ class ApiClient(object):
                                    path_params, query_params, header_params,
                                    body, post_params, files,
                                    response_types_map, auth_settings,
-                                   _return_http_data_only, collection_formats,
+                                   collection_formats,
                                    _preload_content, _request_timeout, _host,
                                    _request_auth)
 
@@ -438,7 +435,6 @@ class ApiClient(object):
                                                        post_params, files,
                                                        response_types_map,
                                                        auth_settings,
-                                                       _return_http_data_only,
                                                        collection_formats,
                                                        _preload_content,
                                                        _request_timeout,
