--- a/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/api.mustache
@@ -63,10 +63,6 @@ class {{classname}}(object):
 {{/allParams}}
         :param async_req: Whether to execute the request asynchronously.
         :type async_req: bool, optional
-        :param _preload_content: if False, the urllib3.HTTPResponse object will
-                                 be returned without reading/decoding response
-                                 data. Default is True.
-        :type _preload_content: bool, optional
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -76,11 +72,12 @@ class {{classname}}(object):
                  returns the request thread.
         :rtype: {{returnType}}{{^returnType}}None{{/returnType}}
         """
+        kwargs['_return_http_data_only'] = True
 {{#asyncio}}
         if async_req is not None:
             kwargs['async_req'] = async_req
 {{/asyncio}}
-        return self.{{operationId}}_with_http_info({{#allParams}}{{paramName}}, {{/allParams}}**kwargs).data  # noqa: E501
+        return self.{{operationId}}_with_http_info({{#allParams}}{{paramName}}, {{/allParams}}**kwargs)  # noqa: E501
 
     @validate_arguments
     def {{operationId}}_with_http_info(self, {{#allParams}}{{paramName}} : {{{vendorExtensions.x-py-typing}}}{{^required}} = None{{/required}}, {{/allParams}}**kwargs) -> ApiResponse:  # noqa: E501
@@ -101,10 +98,9 @@ class {{classname}}(object):
 {{/allParams}}
         :param async_req: Whether to execute the request asynchronously.
         :type async_req: bool, optional
-        :param _preload_content: if False, the urllib3.HTTPResponse object will
-                                 be returned without reading/decoding response
-                                 data. Default is True.
-        :type _preload_content: bool, optional
+        :param _return_http_data_only: response data instead of ApiResponse
+                                       object with status code, headers, etc
+        :type _return_http_data_only: bool, optional
         :param _request_timeout: timeout setting for this request. If one
                                  number provided, it will be total request
                                  timeout. It can also be a pair (tuple) of
@@ -146,7 +142,7 @@ class {{classname}}(object):
         _all_params.extend(
             [
                 'async_req',
-                '_preload_content',
+                '_return_http_data_only',
                 '_request_timeout',
                 '_request_auth',
                 '_content_type',
@@ -282,7 +278,7 @@ class {{classname}}(object):
             response_types_map=_response_types_map,
             auth_settings=_auth_settings,
             async_req=_params.get('async_req'),
-            _preload_content=_params.get('_preload_content', True),
+            _return_http_data_only=_params.get('_return_http_data_only'),  # noqa: E501
             _request_timeout=_params.get('_request_timeout'),
             {{#servers.0}}
             _host=_host,
