Issue #795: Add microprofile OpenAPI annotations for quarkus library in JaxRsSpec

--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/api.mustache
@@ -16,6 +16,12 @@ import io.swagger.annotations.*;
 
 {{#useMicroProfileOpenAPIAnnotations}}
 import org.eclipse.microprofile.openapi.annotations.*;
+import org.eclipse.microprofile.openapi.annotations.info.*;
+import org.eclipse.microprofile.openapi.annotations.security.*;
+import org.eclipse.microprofile.openapi.annotations.tags.*;
+import org.eclipse.microprofile.openapi.annotations.responses.*;
+import org.eclipse.microprofile.openapi.annotations.media.*;
+import org.eclipse.microprofile.openapi.annotations.enums.*;
 {{/useMicroProfileOpenAPIAnnotations}}
 
 {{#supportAsync}}
