--- a/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/apiInterface.mustache
+++ b/modules/openapi-generator/src/main/resources/JavaJaxRS/spec/libraries/quarkus/apiInterface.mustache
@@ -26,14 +26,14 @@
     @Operation(operationId = "{{{operationId}}}", summary = "{{{summary}}}", description = "{{{notes}}}")
     {{#vendorExtensions.x-tags}}@Tag(name="{{tag}}"){{^-last}}, {{/-last}}{{/vendorExtensions.x-tags}}{{#hasProduces}}
     @APIResponses(value = { {{#responses}}
-        @APIResponse(responseCode = {{{code}}}, description = "{{{message}}}", {{#responseHeaders.0}}headers = { {{#responseHeaders}}
+        @APIResponse(responseCode = "{{{code}}}", description = "{{{message}}}", {{#responseHeaders.0}}headers = { {{#responseHeaders}}
                 @Header(name = "{{{baseName}}}", schema = @Schema(type = {{{vendorExtensions.x-microprofile-open-api-schema-type}}}), description = "{{{description}}}"){{^-last}},{{/-last}}{{/responseHeaders}}
             },{{/responseHeaders.0}} content = { {{#produces}}
                @Content(mediaType="{{{mediaType}}}", schema = @Schema(implementation = {{{baseType}}}.class{{#vendorExtensions.x-microprofile-open-api-return-schema-container}}, type = {{{.}}} {{/vendorExtensions.x-microprofile-open-api-return-schema-container}}{{#vendorExtensions.x-microprofile-open-api-return-unique-items}}, uniqueItems = true {{/vendorExtensions.x-microprofile-open-api-return-unique-items}})){{^-last}},{{/-last}}{{/produces}}
         }){{^-last}},{{/-last}}{{/responses}}
     }){{/hasProduces}}{{^hasProduces}}
     @APIResponses(value = { {{#responses}}
-        @APIResponse(responseCode = {{{code}}}, description = "{{{message}}}", {{#responseHeaders.0}}headers = { {{#responseHeaders}}
+        @APIResponse(responseCode = "{{{code}}}", description = "{{{message}}}", {{#responseHeaders.0}}headers = { {{#responseHeaders}}
             @Header(name = "{{{baseName}}}", schema = @Schema(type = {{{vendorExtensions.x-microprofile-open-api-schema-type}}}), description = "{{{description}}}"){{^-last}},{{/-last}}{{/responseHeaders}}
         },{{/responseHeaders.0}} content = {
             @Content(schema = @Schema(implementation = {{{baseType}}}.class{{#vendorExtensions.x-microprofile-open-api-return-schema-container}}, type = {{{.}}} {{/vendorExtensions.x-microprofile-open-api-return-schema-container}}{{#vendorExtensions.x-microprofile-open-api-return-unique-items}}, uniqueItems = true {{/vendorExtensions.x-microprofile-open-api-return-unique-items}}))
