--- a/modules/openapi-generator/src/main/resources/python-nextgen/setup.mustache
+++ b/modules/openapi-generator/src/main/resources/python-nextgen/setup.mustache
@@ -49,6 +49,7 @@ setup(
     long_description="""\
     {{appDescription}}  # noqa: E501
     """
+    package_data={"{{{packageName}}}": ["py.typed"]},
 )
 {{/-last}}
 {{/apis}}
